--- a/Avalonia.Tiels/Pages/Settings/GeneralPage.axaml
+++ b/Avalonia.Tiels/Pages/Settings/GeneralPage.axaml
@@ -28,11 +28,12 @@
                                                 </Border>
                                         </WrapPanel></CheckBox>
                                         <CheckBox x:Name="ExperimentalCheckBox" Content="{x:Static p:Resources.ExperimentalFeatures}"/>
+                                        <TextBlock FontSize="16" Margin="0,10,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.TileSettingsLabel}"/>
                                         <CheckBox x:Name="HideTileButtonsCheckBox" Content="{x:Static p:Resources.HideTileButtons}"/>
                                 </StackPanel>
                                 <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10">
                                         <Button Click="DefaultButtonClicked" Content="{x:Static p:Resources.Default}"/>
-                                        <Button x:Name="ApplyButton" Margin="5,0,0,0" Click="ApplyButtonClicked" Content="{x:Static p:Resources.Apply}"/>
+                                        <Button Click="ApplyButtonClicked" x:Name="ApplyButton" Margin="5,0,0,0" Content="{x:Static p:Resources.Apply}"/>
                                 </WrapPanel>
                                 <WrapPanel HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="15">
                                         <TextBlock x:Name="StatusIcon" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Padding="0,0,5,0">󿚚</TextBlock>
