--- a/Avalonia.Tiels/TileWindow.axaml
+++ b/Avalonia.Tiels/TileWindow.axaml
@@ -5,8 +5,8 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Avalonia.Tiels.TileWindow"
         TransparencyLevelHint="Transparent"
-        SystemDecorations="None"
-        Title="TileWindow" Opened="OnLoad" Background="{x:Null}" ShowInTaskbar="False">
+        Title="TileWindow" Opened="OnLoad" Background="{x:Null}" ShowInTaskbar="False"
+        SystemDecorations="None">
     <Window.Styles>
         <Style Selector="TextBlock.Dark">
             <Setter Property="Foreground" Value="#ffffffff"/>
@@ -33,25 +33,50 @@
             <Setter Property="FontSize" Value="18"/>
         </Style>
     </Window.Styles>
+    
     <Grid x:Name="MainGrid">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="28"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid x:Name="EntryContent"/>
-        <Grid Grid.Row="1" x:Name="EditBar">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="24"></ColumnDefinition>
-                <ColumnDefinition Width="24"></ColumnDefinition>
-                <ColumnDefinition Width="24"></ColumnDefinition>
-                <ColumnDefinition Width="24"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" x:Name="HideBtn" Classes="EditBar Arrow" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚝</Button>
-            <Button Grid.Column="1" x:Name="OpenDirBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚞</Button>
-            <Button Grid.Column="2" x:Name="RotateBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚟</Button>
-            <Button Grid.Column="3" x:Name="RenameBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚠</Button>
+        <!-- Content -->
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="28"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid x:Name="EntryContent"/>
+            <Grid Grid.Row="1" x:Name="EditBar">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="24"></ColumnDefinition>
+                    <ColumnDefinition Width="24"></ColumnDefinition>
+                    <ColumnDefinition Width="24"></ColumnDefinition>
+                    <ColumnDefinition Width="24"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" x:Name="HideBtn" Classes="EditBar Arrow" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚝</Button>
+                <Button Grid.Column="1" x:Name="OpenDirBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚞</Button>
+                <Button Grid.Column="2" x:Name="RotateBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚟</Button>
+                <Button Grid.Column="3" x:Name="RenameBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚠</Button>
+            </Grid>
+            <TextBlock Grid.Row="1" x:Name="TileName" Classes="EditBar" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center">{Name}</TextBlock>
         </Grid>
-        <TextBlock Grid.Row="1" x:Name="TileName" Classes="EditBar" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center">{Name}</TextBlock>
+        <!-- Window hints -->
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="6"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="6"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="6"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="6"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Row="0" Grid.Column="0" Background="#ffff0000" x:Name="ResizeAreaTopLeft" Cursor="TopLeftCorner"/>
+            <Grid Grid.Row="1" Grid.Column="0" Background="#ffffff00" x:Name="ResizeAreaMidLeft" Cursor="SizeWestEast"/>
+            <Grid Grid.Row="2" Grid.Column="0" Background="#ffff0000" x:Name="ResizeAreaBotLeft" Cursor="BottomRightCorner"/>
+            <Grid Grid.Row="0" Grid.Column="2" Background="#ffff0000" x:Name="ResizeAreaTopRight" Cursor="TopLeftCorner"/>
+            <Grid Grid.Row="1" Grid.Column="2" Background="#ffffff00" x:Name="ResizeAreaMidRight" Cursor="SizeWestEast" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="2" Grid.Column="2" Background="#ffff0000" x:Name="ResizeAreaBotRight" Cursor="BottomRightCorner"/>
+            <Grid Grid.Row="0" Grid.Column="1" Background="#ff0000ff" x:Name="ResizeAreaTopMiddle" Cursor="SizeNorthSouth"/>
+            <Grid Grid.Row="2" Grid.Column="1" Background="#ff0000ff" x:Name="ResizeAreaBotMiddle" Cursor="SizeNorthSouth"/>
+        </Grid>
     </Grid>
 </Window>
