--- a/Avalonia.Tiels/TileWindow.axaml
+++ b/Avalonia.Tiels/TileWindow.axaml
@@ -2,6 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:p="clr-namespace:Avalonia.Tiels.Resources"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Avalonia.Tiels.TileWindow"
         TransparencyLevelHint="Transparent"
@@ -53,12 +54,12 @@
                 <Button Grid.Column="0" x:Name="HideBtn" Classes="EditBar Arrow" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚝</Button>
                 <Button Grid.Column="1" x:Name="OpenDirBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚞</Button>
                 <Button Grid.Column="2" x:Name="RotateBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚟</Button>
-                <Button Grid.Column="3" x:Name="RenameBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚠</Button>
+                <Button Grid.Column="3" x:Name="RenameBtn" Click="ToggleEditMode" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚠</Button>
             </Grid>
             <TextBlock Grid.Row="1" x:Name="TileName" Classes="EditBar" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center">{Name}</TextBlock>
         </Grid>
         <!-- Window hints -->
-        <Grid>
+        <Grid x:Name="WindowHints" IsVisible="False">
             <Grid.RowDefinitions>
                 <RowDefinition Height="6"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
@@ -69,14 +70,17 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="6"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Grid Grid.Row="0" Grid.Column="0" Background="#ffff0000" x:Name="ResizeAreaUV" Cursor="TopLeftCorner" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
-            <Grid Grid.Row="1" Grid.Column="0" Background="#ffffff00" x:Name="ResizeAreaU" Cursor="SizeWestEast" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
-            <Grid Grid.Row="2" Grid.Column="0" Background="#ffff0000" x:Name="ResizeAreaUY" Cursor="BottomLeftCorner" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
-            <Grid Grid.Row="0" Grid.Column="2" Background="#ffff0000" x:Name="ResizeAreaXV" Cursor="TopRightCorner" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
-            <Grid Grid.Row="1" Grid.Column="2" Background="#ffffff00" x:Name="ResizeAreaX" Cursor="SizeWestEast" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
-            <Grid Grid.Row="2" Grid.Column="2" Background="#ffff0000" x:Name="ResizeAreaXY" Cursor="BottomRightCorner" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
-            <Grid Grid.Row="0" Grid.Column="1" Background="#ff0000ff" x:Name="ResizeAreaV" Cursor="SizeNorthSouth" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
-            <Grid Grid.Row="2" Grid.Column="1" Background="#ff0000ff" x:Name="ResizeAreaY" Cursor="SizeNorthSouth" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="0" Grid.Column="0" Background="Transparent" x:Name="ResizeAreaUV" Cursor="TopLeftCorner" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="1" Grid.Column="0" Background="Transparent" x:Name="ResizeAreaU" Cursor="SizeWestEast" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="2" Grid.Column="0" Background="Transparent" x:Name="ResizeAreaUY" Cursor="BottomLeftCorner" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="0" Grid.Column="2" Background="Transparent" x:Name="ResizeAreaXV" Cursor="TopRightCorner" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="1" Grid.Column="2" Background="Transparent" x:Name="ResizeAreaX" Cursor="SizeWestEast" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="2" Grid.Column="2" Background="Transparent" x:Name="ResizeAreaXY" Cursor="BottomRightCorner" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="0" Grid.Column="1" Background="Transparent" x:Name="ResizeAreaV" Cursor="SizeNorthSouth" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="2" Grid.Column="1" Background="Transparent" x:Name="ResizeAreaY" Cursor="SizeNorthSouth" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
+            <Grid Grid.Row="1" Grid.Column="1" Background="#25000000" Margin="0,0,0,28" Cursor="SizeAll" PointerPressed="MoveDown" PointerReleased="MoveUp" PointerMoved="Move">
+                <TextBlock Text="{x:Static p:Resources.MoveWindow}" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
