--- a/Avalonia.Tiels/Pages/Settings/GeneralPage.axaml
+++ b/Avalonia.Tiels/Pages/Settings/GeneralPage.axaml
@@ -1,46 +1,59 @@
 ﻿<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:p="clr-namespace:Avalonia.Tiels.Resources"
-             xmlns:controls="clr-namespace:Avalonia.Tiels.Controls"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Avalonia.Tiels.Pages.Settings.GeneralPage">
-                            <Grid>
-                                <StackPanel Margin="10">
-                                        <TextBlock FontSize="16" Margin="0,0,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.SettingsLabel}"/>
-                                        <Label Content="{x:Static p:Resources.DefaultTilesDirectory}"/>
-                                        <TextBox x:Name="TilesDirectoryBox" Margin="0,0,0,10" KeyUp="TilePathTextBoxChanged"/>
-                                        <Label Content="{x:Static p:Resources.LanguageSelection}"/>
-                                        <ComboBox x:Name="LanguageBox" Margin="0,0,0,10" HorizontalAlignment="Stretch" SelectionChanged="LanguageChanged">
-                                                <ComboBox.ItemTemplate>
-                                                        <DataTemplate>
-                                                                <TextBlock Text="{Binding DisplayName}"/>
-                                                        </DataTemplate>
-                                                </ComboBox.ItemTemplate>
-                                        </ComboBox>
-                                        <CheckBox x:Name="AutostartCheckBox" Content="{x:Static p:Resources.AutostartEnabled}"/>
-                                        <CheckBox x:Name="HideWindowCheckBox" Content="{x:Static p:Resources.HideAtStartup}"/>
-                                        <CheckBox x:Name="EffectsCheckBox"><WrapPanel>
-                                                <TextBlock Padding="0,3,6,0" Text="{x:Static p:Resources.SpecialEffects}"/>
-                                                <Border CornerRadius="5" Background="#0A0A0A">
-                                                        <TextBlock Foreground="#ffffff" Padding="3" Text="{x:Static p:Resources.EffectsPerformanceWarning}"/>
-                                                </Border>
-                                        </WrapPanel></CheckBox>
-                                        <CheckBox x:Name="ExperimentalCheckBox" Content="{x:Static p:Resources.ExperimentalFeatures}"/>
-                                        
-                                        <TextBlock FontSize="16" Margin="0,10,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.TileSettingsLabel}"/>
-                                        <Label Content="{x:Static p:Resources.Snapping}"/>
-                                        <TextBox x:Name="SnappingBox" Margin="0,0,0,10" Width="160" HorizontalAlignment="Left"/>
-                                        <CheckBox x:Name="HideTileButtonsCheckBox" Content="{x:Static p:Resources.HideTileButtons}"/>
-                                </StackPanel>
-                                <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10">
-                                        <Button Click="DefaultButtonClicked" Content="{x:Static p:Resources.Default}"/>
-                                        <Button Click="ApplyButtonClicked" x:Name="ApplyButton" Margin="5,0,0,0" Content="{x:Static p:Resources.Apply}"/>
-                                </WrapPanel>
-                                <WrapPanel HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="15">
-                                        <TextBlock x:Name="StatusIcon" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Padding="0,0,5,0">󿚚</TextBlock>
-                                        <TextBlock x:Name="StatusText" Text="{x:Static p:Resources.NoChanges}"/>
-                                </WrapPanel>
-                        </Grid>
+		 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		 xmlns:p="clr-namespace:Avalonia.Tiels.Resources"
+		 xmlns:controls="clr-namespace:Avalonia.Tiels.Controls"
+		 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+		 x:Class="Avalonia.Tiels.Pages.Settings.GeneralPage">
+	<Grid>
+		<Grid HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*"></ColumnDefinition>
+				<ColumnDefinition Width="*"></ColumnDefinition>
+			</Grid.ColumnDefinitions>
+			<Button Grid.Column="1" Click="ApplyButtonClicked" x:Name="ApplyButton" Margin="5,0,0,0" Content="{x:Static p:Resources.Apply}"/>
+			<Button Grid.Column="0" Click="DefaultButtonClicked" x:Name="DefaultButton" Content="{x:Static p:Resources.Default}"/>
+		</Grid>
+			<StackPanel Margin="10">
+			<TextBlock FontSize="16" Margin="0,0,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.SettingsLabel}"/>
+			<Label Content="{x:Static p:Resources.DefaultTilesDirectory}"/>
+			<TextBox x:Name="TilesDirectoryBox" Margin="0,0,0,10" KeyUp="TilePathTextBoxChanged"/>
+			<Label Content="{x:Static p:Resources.LanguageSelection}"/>
+			<ComboBox x:Name="LanguageBox" Margin="0,0,0,10" HorizontalAlignment="Stretch" SelectionChanged="LanguageChanged">
+				<ComboBox.ItemTemplate>
+					<DataTemplate>
+						<TextBlock Text="{Binding DisplayName}"/>
+					</DataTemplate>
+				</ComboBox.ItemTemplate>
+			</ComboBox>
+			<CheckBox x:Name="AutostartCheckBox" Content="{x:Static p:Resources.AutostartEnabled}"/>
+			<CheckBox x:Name="HideWindowCheckBox" Content="{x:Static p:Resources.HideAtStartup}"/>
+			<CheckBox x:Name="EffectsCheckBox"><WrapPanel>
+				<TextBlock Padding="0,3,6,0" Text="{x:Static p:Resources.SpecialEffects}"/>
+				<Border CornerRadius="5" Background="#0A0A0A">
+					<TextBlock Foreground="#ffffff" Padding="3" Text="{x:Static p:Resources.EffectsPerformanceWarning}"/>
+				</Border>
+			</WrapPanel></CheckBox>
+			<CheckBox x:Name="ExperimentalCheckBox" Content="{x:Static p:Resources.ExperimentalFeatures}"/>
+			
+			<TextBlock FontSize="16" Margin="0,10,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.TileSettingsLabel}"/>
+			<WrapPanel Margin="0,0,0,10">
+				<StackPanel>
+					<Label Content="{x:Static p:Resources.Snapping}"/>
+					<TextBox x:Name="SnappingBox" Width="160" HorizontalAlignment="Left"/>
+				</StackPanel>
+				<StackPanel Margin="10,0,0,0">
+					<Label Content="{x:Static p:Resources.HandleSize}"/>
+					<TextBox x:Name="HandleSizeBox" Width="240" HorizontalAlignment="Left"/>
+				</StackPanel>
+			</WrapPanel>
+			<CheckBox x:Name="HideTileButtonsCheckBox" Content="{x:Static p:Resources.HideTileButtons}"/>
+		</StackPanel>
+		
+		<WrapPanel HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="15">
+			<TextBlock x:Name="StatusIcon" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Padding="0,0,5,0">󿚚</TextBlock>
+			<TextBlock x:Name="StatusText" Text="{x:Static p:Resources.NoChanges}"/>
+		</WrapPanel>
+	</Grid>
 </UserControl>
