--- a/Avalonia.Tiels/TileWindow.axaml
+++ b/Avalonia.Tiels/TileWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:p="clr-namespace:Avalonia.Tiels.Resources"
+        xmlns:controls="clr-namespace:Avalonia.Tiels.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Avalonia.Tiels.TileWindow"
         TransparencyLevelHint="Transparent"
@@ -42,7 +43,8 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="28"></RowDefinition>
             </Grid.RowDefinitions>
-            <Grid x:Name="EntryContent"/>
+            <Grid x:Name="EntryContent">
+            </Grid>
             <Grid Grid.Row="1" x:Name="EditBar">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="24"></ColumnDefinition>
@@ -78,7 +80,7 @@
             <Grid Grid.Row="2" Grid.Column="2" Background="Transparent" x:Name="ResizeAreaXY" Cursor="BottomRightCorner" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
             <Grid Grid.Row="0" Grid.Column="1" Background="Transparent" x:Name="ResizeAreaV" Cursor="SizeNorthSouth" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
             <Grid Grid.Row="2" Grid.Column="1" Background="Transparent" x:Name="ResizeAreaY" Cursor="SizeNorthSouth" PointerPressed="ResizeDown" PointerReleased="ResizeUp" PointerMoved="ResizeMove"/>
-            <Grid Grid.Row="1" Grid.Column="1" Background="#25000000" Margin="0,0,0,28" Cursor="SizeAll" PointerPressed="MoveDown" PointerReleased="MoveUp" PointerMoved="Move">
+            <Grid Grid.Row="1" Grid.Column="1" Background="#25000000" x:Name="MoveArea" Margin="0,0,0,28" Cursor="SizeAll" PointerPressed="MoveDown" PointerReleased="MoveUp" PointerMoved="Move">
                 <TextBlock Text="{x:Static p:Resources.MoveWindow}" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             </Grid>
         </Grid>
