--- a/Avalonia.Tiels/Controls/EntryComponent.axaml
+++ b/Avalonia.Tiels/Controls/EntryComponent.axaml
@@ -12,7 +12,7 @@
 				<RowDefinition Height="18"/> <!-- Name of entry -->
 			</Grid.RowDefinitions>
 			<Image Grid.Row="0" Width="48" Height="48" HorizontalAlignment="Center" Source="{Binding Preview, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}"/>
-			<TextBlock Grid.Row="1" VerticalAlignment="Bottom" TextAlignment="Center" Text="{Binding EntryName, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}"/>
+			<TextBlock Grid.Row="1" Initialized="TextBlockInitialized" x:Name="FileNameTextBlock" VerticalAlignment="Bottom" TextAlignment="Center" Text="{Binding EntryName, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}"/>
 		</Grid>
 	</Button>
 </UserControl>
