Use class instead of string for future use

--- a/Avalonia.Tiels/Controls/SidebarButton.axaml
+++ b/Avalonia.Tiels/Controls/SidebarButton.axaml
@@ -17,7 +17,7 @@
         <Grid>
             <TextBlock FontFamily="avares://Avalonia.Tiels/Assets#lucidelite"
                        VerticalAlignment="Bottom"
-                       Text="{Binding Icon, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"/>
+                       Text="{Binding Glyph, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"/>
             <TextBlock Margin="20,0" Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"/>
         </Grid>
     </ToggleButton>
