--- a/Avalonia.Tiels/Pages/Create/TilePage.axaml
+++ b/Avalonia.Tiels/Pages/Create/TilePage.axaml
@@ -11,9 +11,7 @@
         <TextBlock FontSize="16" Margin="0,0,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.CreateLabel}"/>
         <Label Content="{x:Static p:Resources.Name}"/>
         <TextBox x:Name="NameBox" Watermark="{x:Static p:Resources.NameOfTileWatermark}"/>
-        <Label Margin="0,10,0,0" Content="{x:Static p:Resources.Type}"/>
-        <ComboBox x:Name="TileTypeBox" HorizontalAlignment="Stretch"/>
-        <StackPanel x:Name="TilePathPanel" Margin="0,10,0,0">
+        <StackPanel x:Name="TilePathPanel" Margin="0,10,0,0" IsVisible="False">
             <Label Content="{x:Static p:Resources.TilePath}"/>
             <TextBox x:Name="PathBox" Watermark="{x:Static p:Resources.NameOfTileWatermark}"/>
         </StackPanel>
