--- a/Avalonia.Tiels/App.axaml
+++ b/Avalonia.Tiels/App.axaml
@@ -3,10 +3,32 @@
              x:Class="Avalonia.Tiels.App">
     <Application.Styles>
         <FluentTheme Mode="Light"/>
+        <Style Selector="Button.link">
+            <Setter Property="Foreground" Value="Blue" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Template">
+                <ControlTemplate>
+                    <ContentPresenter Content="{TemplateBinding Content}">
+                        <ContentPresenter.Styles>
+                            <Style Selector="TextBlock">
+                                <Setter Property="Foreground" Value="{TemplateBinding Foreground}"/>
+                                <Setter Property="FontSize" Value="{TemplateBinding FontSize}"/>
+                                <Setter Property="TextDecorations" Value="Underline"/>
+                            </Style>
+                        </ContentPresenter.Styles>
+                    </ContentPresenter>
+                </ControlTemplate>
+            </Setter>
+        </Style>
     </Application.Styles>
     <Application.Resources>
         <Color x:Key="BaseBorderColor">#CFCFCF</Color>
+        <Color x:Key="BaseCategoryBorderColor">#25000000</Color>
         <Color x:Key="BaseTitleColor">#666666</Color>
+        <Color x:Key="BaseCategoryColor">#000000</Color>
     </Application.Resources>
     <TrayIcon.Icons>
         <TrayIcons>
