--- a/Avalonia.Tiels/Pages/Settings/SnappingPage.axaml
+++ b/Avalonia.Tiels/Pages/Settings/SnappingPage.axaml
@@ -6,6 +6,14 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Pages.Settings.SnappingPage">
 	<Grid>
+		<Grid HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*"></ColumnDefinition>
+				<ColumnDefinition Width="*"></ColumnDefinition>
+			</Grid.ColumnDefinitions>
+			<Button Grid.Column="1" Click="ApplyButtonClicked" x:Name="ApplyButton" Margin="5,0,0,0" Content="{x:Static p:Resources.Apply}"/>
+			<Button Grid.Column="0" Click="DefaultButtonClicked" x:Name="DefaultButton" Content="{x:Static p:Resources.Default}"/>
+		</Grid>
 		<StackPanel Margin="10">
 			<TextBlock FontSize="16" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.SnappingLabel}"/>
 			<WrapPanel Margin="0,10,0,10">
